src/test/ui/const-generics/issues/issue-74101.min.stderr
error: `[u8; _]` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74101.rs:6:18
   |
LL | fn test<const N: [u8; 1 + 2]>() {}
   |                  ^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(const_generics)]`

error: `[u8; _]` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74101.rs:9:21
   |
LL | struct Foo<const N: [u8; 1 + 2]>;
   |                     ^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(const_generics)]`

error: aborting due to 2 previous errors

